# tradepy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
tradepy/alpaca/: clients.py  utils.py
tradepy/calendar/: __init__.py
tradepy/download/: download.py  test_download.py
tradepy/download_history/: __init__.py  download_history.py  test_download_history.py
tradepy/download_symbols/: __init__.py  download_symbols.py
tradepy/download_tickers/: __init__.py  download_tickers.py
tradepy/functions/: __init__.py  growth.py  rolling.py  tsl.py  volume.py
tradepy/signals/: __init__.py  bb.py  macd.py  rsi.py  sma.py  test_signals.py
tradepy/telegram/: __init__.py  send_to_telegram.py
tradepy/utils/: __init__.py  calendar.py  split_into_chunks.py  test_utils.py
