[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepy"
version = "0.0.5"
description = ""
authors = []
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pandas==2.3.0",
    "yfinance>=0.2.54",
    "pandas_market_calendars>=4.6.1",
    "alpaca-py>=0.39.0",
]
